// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render correctly 1`] = `
<Fragment>
  <CreateProjectPageHeader
    title={
      <span
        className="text-middle"
      >
        <img
          alt=""
          className="spacer-right"
          height="24"
          src="/images/alm/bitbucket.svg"
        />
        onboarding.create_project.bitbucketcloud.title
      </span>
    }
  />
  <AlmSettingsInstanceDropdown
    almInstances={
      Array [
        Object {
          "alm": "bitbucketcloud",
          "key": "key",
        },
      ]
    }
    almKey="bitbucketcloud"
    onChangeConfig={[MockFunction]}
    selectedAlmInstance={
      Object {
        "alm": "bitbucketcloud",
        "key": "key",
      }
    }
  />
  <BitbucketCloudSearchForm
    isLastPage={true}
    loadingMore={false}
    onImport={[MockFunction]}
    onLoadMore={[MockFunction]}
    onSearch={[MockFunction]}
    searchQuery=""
    searching={false}
  />
</Fragment>
`;

exports[`Should render correctly: Loading... 1`] = `
<Fragment>
  <CreateProjectPageHeader
    title={
      <span
        className="text-middle"
      >
        <img
          alt=""
          className="spacer-right"
          height="24"
          src="/images/alm/bitbucket.svg"
        />
        onboarding.create_project.bitbucketcloud.title
      </span>
    }
  />
  <AlmSettingsInstanceDropdown
    almInstances={
      Array [
        Object {
          "alm": "bitbucketcloud",
          "key": "key",
        },
      ]
    }
    almKey="bitbucketcloud"
    onChangeConfig={[MockFunction]}
    selectedAlmInstance={
      Object {
        "alm": "bitbucketcloud",
        "key": "key",
      }
    }
  />
  <i
    className="spinner"
  />
</Fragment>
`;

exports[`Should render correctly: Need App password 1`] = `
<Fragment>
  <CreateProjectPageHeader
    title={
      <span
        className="text-middle"
      >
        <img
          alt=""
          className="spacer-right"
          height="24"
          src="/images/alm/bitbucket.svg"
        />
        onboarding.create_project.bitbucketcloud.title
      </span>
    }
  />
  <AlmSettingsInstanceDropdown
    almInstances={
      Array [
        Object {
          "alm": "bitbucketcloud",
          "key": "key",
        },
      ]
    }
    almKey="bitbucketcloud"
    onChangeConfig={[MockFunction]}
    selectedAlmInstance={
      Object {
        "alm": "bitbucketcloud",
        "key": "key",
      }
    }
  />
  <PersonalAccessTokenForm
    almSetting={
      Object {
        "alm": "bitbucketcloud",
        "key": "key",
      }
    }
    onPersonalAccessTokenCreated={[MockFunction]}
    resetPat={false}
  />
</Fragment>
`;

exports[`Should render correctly: Wrong config 1`] = `
<Fragment>
  <CreateProjectPageHeader
    title={
      <span
        className="text-middle"
      >
        <img
          alt=""
          className="spacer-right"
          height="24"
          src="/images/alm/bitbucket.svg"
        />
        onboarding.create_project.bitbucketcloud.title
      </span>
    }
  />
  <AlmSettingsInstanceDropdown
    almInstances={
      Array [
        Object {
          "alm": "bitbucketcloud",
          "key": "key",
        },
      ]
    }
    almKey="bitbucketcloud"
    onChangeConfig={[MockFunction]}
  />
  <WrongBindingCountAlert
    alm="bitbucketcloud"
    canAdmin={false}
  />
</Fragment>
`;
